@@ -398,7 +398,7 @@ void do_desert(dbref player, const char *arg);
 void do_dismiss(dbref player, const char *arg);
 void clear_followers(dbref leader, int noisy);
 void clear_following(dbref follower, int noisy);
-dbref find_var_dest(dbref player, dbref exit_obj);
+dbref find_var_dest(dbref player, dbref exit_obj, NEW_PE_INFO *pe_info);
 
 /* From player.c */
 extern const char *connect_fail_limit_exceeded;
